syntax = "proto3";

package database;

option go_package = "github.com/martinmhan/tweet-app-api/cmd/database-access/proto";

service DatabaseAccess {
  rpc insertUser(User) returns (InsertID) {}
  rpc insertTweet(Tweet) returns (InsertID) {}
  rpc getUser(UserID) returns (User) {}
  rpc getTweets(UserID) returns (Tweets) {}
}

message User {
  string ID = 1;
  string Username = 2;
  string Password = 3;
}

message UserID {
  string UserID = 1;
}

message Tweet {
  string ID = 1;
  string Text = 2;
}

message Tweets {
  repeated Tweet Tweets = 1;
}

message InsertID {
  string InsertID = 1;
}