syntax = "proto3";

package database;

option go_package = "github.com/martinmhan/tweet-app-api/cmd/databaseaccess/proto";

service DatabaseAccess {
  rpc saveUser(UserConfig) returns (InsertID) {}
  rpc saveFollow(Follow) returns (InsertID) {}
  rpc saveTweet(TweetConfig) returns (InsertID) {}
  rpc getUser(UserID) returns (User) {}
  rpc getFollowers(UserID) returns (Follows) {}
  rpc getFollowees(UserID) returns (Follows) {}
  rpc getTweets(UserID) returns (Tweets) {}
  rpc getAllUsers(GetAllUsersParam) returns (Users) {}
  rpc getAllFollows(GetAllFollowsParam) returns (Follows) {}
  rpc getAllTweets(GetAllTweetsParam) returns (Tweets) {}
}

message UserConfig {
  string Username = 1;
  string Password = 2;
}

message User {
  string ID = 1;
  string Username = 2;
  string Password = 3;
}

message Users {
  repeated User Users = 1;
}

message UserID {
  string UserID = 1;
}

message TweetConfig {
  string UserID = 1;
  string Username = 2;
  string Text = 3;
}

message Tweet {
  string ID = 1;
  string UserID = 2;
  string Username = 3;
  string Text = 4;
}

message Tweets {
  repeated Tweet Tweets = 1;
}

message Follow {
  string FollowerUserID = 1;
  string FollowerUsername = 2;
  string FolloweeUserID = 3;
  string FolloweeUsername = 4;
}

message Follows {
  repeated Follow Follows = 1;
}

message GetAllUsersParam {}
message GetAllFollowsParam {}
message GetAllTweetsParam {}

message InsertID {
  string InsertID = 1;
}
